--- a/part1/docker-compose.yml
+++ b/part1/docker-compose.yml
@@ -1,11 +1,9 @@
-version: '3.9'
-
 services:
   web:
     networks:
       - web
-  db:
-    image: ghcr.io/eslih/postgres:16.1-alpine
+  pg:
+    image: postgres:16.1-alpine
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
