--- a/part2/docker-compose.yml
+++ b/part2/docker-compose.yml
@@ -1,13 +1,13 @@
 services:
-  api:
-    image: nathansegers/big_data_and_ai-24_may_api:versie1
+  backend:
+    image: nathansegers/big_data_and_ai-24_august_backend:version1
     build:
       context: ./api
       dockerfile: dockerfile
     ports:
       - 8001:80
   frontend:
-    image: nathansegers/big_data_and_ai-24_may_frontend:versie1
+    image: nathansegers/big_data_and_ai-24_may_frontend:version1
     build:
       context: ./frontend
       dockerfile: Dockerfile
@@ -15,5 +15,5 @@ services:
       - 8000:80
     environment:
       API_PORT: 80
-      API_HOST: api
+      API_HOST: backend
       NAME: "Nathan Segers"
