--- a/part1/docker-compose.yml
+++ b/part1/docker-compose.yml
@@ -1,12 +1,44 @@
+version: '3.9'
+
 services:
-  web:
-    networks:
-      - web
-  pg:
-    image: postgres:16.1-alpine
+  db:
+    image: ghcr.io/eslih/postgres:16.1-alpine
     environment:
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=points
+      - POSTGRES_USER=student
+      - POSTGRES_PASSWORD=examen
     networks:
       - database
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "student"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+
+  web:
+    build: ./pointsApp
+    ports:
+      - "5000:5000"
+    networks:
+      - web
+      - database
+    depends_on:
+      - db
+    environment:
+      - DATABASE_URL=postgresql://student:examen@db:5432/points
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
+      start_period: 10s
+
+networks:
+  web: {}
+  database: {}
+
+volumes:
+  postgres_data:
