--- a/part2/kubernetes/frontend.yml
+++ b/part2/kubernetes/frontend.yml
@@ -1,10 +1,9 @@
-# api.yml file:
 
-# Backend Deployment and Service (API)
+# Frontend Deployment and Service
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: api
+  name: frontend
   namespace: exam-mehmetonal
   labels:
     createdBy: "Mehmet-Alperen-Onal"
@@ -12,86 +11,102 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: api
+      app: frontend
   template:
     metadata:
       labels:
-        app: api
+        app: frontend
     spec:
+      nodeSelector:
+        kubernetes.io/hostname: k3d-k3s-default-agent-2 
       containers:
-        - image: alperenonal/big_data_and_ai-24_may_api:versie1
+        - image: alperenonal/big_data_and_ai-24_may_frontend:versie1
           imagePullPolicy: Always
-          name: api
+          name: frontend
           ports:
             - containerPort: 80
           env:
+            - name: API_PORT
+              value: "80"  # Port exposed by the API service within the cluster
+            - name: API_HOST
+              value: "api-service"  # Kubernetes service name for the API
             - name: NAME
               value: "Mehmet Onal"
-            - name: DATE
-              value: "2024-05-08"
-          livenessProbe:
-            httpGet:
-              path: /
-              port: 80
-            initialDelaySeconds: 15
-            periodSeconds: 10
+
 ---
+
+# Frontend Service
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-service
+  name: frontend-service
   namespace: exam-mehmetonal
 spec:
   type: NodePort
   selector:
-    app: api
+    app: frontend
   ports:
     - port: 80
       targetPort: 80
-      nodePort: 30001
+      nodePort: 30010
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# # Frontend Deployment and Service
 # apiVersion: apps/v1
 # kind: Deployment
 # metadata:
-#   name: api
-#   namespace: howest-api
+#   name: frontend
+#   namespace: exxam-mahmoudasadiheris
 #   labels:
-#     # Replace this by your own name
 #     createdBy: "Mahmoud-Asadi-Heris"
-
 # spec:
 #   replicas: 1
 #   selector:
 #     matchLabels:
-#       app: app
+#       app: frontend
 #   template:
 #     metadata:
 #       labels:
-#         app: api
+#         app: frontend
 #     spec:
+#       nodeSelector:
+#         kubernetes.io/hostname: k3d-k3s-default-agent-2
 #       containers:
-#         - image: nathansegers/big_data_and_ai-24_may_api
+#         - image: mahmoudasadi/big_data_and_ai-24_may_frontend:versie1
 #           imagePullPolicy: Always
-#           name: api-demo
+#           name: frontend
 #           ports:
 #             - containerPort: 80
-#           resources: {}
 #           livenessProbe:
 #             httpGet:
 #               path: /
 #               port: 80
 #             initialDelaySeconds: 15
 #             periodSeconds: 10
-
 # ---
 # apiVersion: v1
 # kind: Service
 # metadata:
-#   name: api-service
+#   name: frontend-service
+#   namespace: exxam-mahmoudasadiheris
 # spec:
 #   type: NodePort
 #   selector:
-#     app: app
+#     app: frontend
 #   ports:
 #     - port: 80
-#       targetPort: 8000
-#       nodePort: 30002
+#       targetPort: 80
+#       nodePort: 30000
