--- a/docker-recap-student/api/.env
+++ b/docker-recap-student/api/.env
@@ -4,4 +4,5 @@ MYSQL_PORT=3306           # Default MySQL port
 MYSQL_USER=my_user        # Non-root MySQL user
 MYSQL_PASSWORD=your_password_here  # Password for the non-root user
 MYSQL_DATABASE=my_database # The database to use
-MYSQL_ROOT_PASSWORD=9171   # Root password (if needed, but avoid using root)
+MYSQL_ROOT_PASSWORD=1453   # Root password (if needed, but avoid using root)
+API_PORT=8000
