--- a/docker-recap-student/api/Dockerfile
+++ b/docker-recap-student/api/Dockerfile
@@ -4,6 +4,9 @@ FROM python:3.12-slim
 # Set the working directory in the container
 WORKDIR /app
 
+# Install MySQL client tools for database connection checks
+RUN apt-get update && apt-get install -y default-mysql-client && rm -rf /var/lib/apt/lists/*
+
 # Copy the requirements file into the container
 COPY requirements.txt .
 
